<resources>

    <string name="app_name">GithubRepos</string>
    <string name="app_label">Payconiq</string>
    <string name="action_settings">Settings</string>
    <string name="activity_repo_detail_title">Repo Detail</string>
    <string name="activity_repos_title">JW\'s Repos</string>
    <string name="activity_repo_title">Repo</string>
    <string name="activity_repo_title_uppercase">REPO</string>
    <string name="activity_repos_menu_search_hint">Search repos</string>
    <string name="activity_repos_empty_view">No Repos</string>
    <string name="add_repo_warning_text">Unabled to add some repos, swipe to retry.</string>
    <string name="no_connection_warning_text">Please check your internet connection.</string>
    <string name="activity_repo_detail_fullname_title">Full Name</string>
    <string name="activity_repo_detail_owner_title">Owner</string>
    <string name="activity_repo_detail_desc_title">Desc</string>
    <string name="activity_repo_detail_owner_title_uppercase">REPO OWNER</string>
    <string name="activity_repo_detail_url_title">Url</string>
    <string name="activity_repo_detail_login_title">Login</string>
    <string name="activity_repo_detail_type_title">Type</string>
    <string name="activity_repo_detail_admin_title">Admin</string>
    <string name="activity_repo_detail_followers_title">Followers</string>
    <string name="activity_repo_detail_following_title">Following</string>
    <string name="activity_repo_detail_starred_title">Starred</string>
    <string name="activity_repo_detail_subs_title">Subscriptions</string>
    <string name="activity_repo_detail_repos_title">Repos</string>
    <string name="activity_repo_detail_events_title">Events</string>
    <string name="activity_repo_detail_rec_events_title">Received Events</string>
    <string name="private_string">Private</string>
    <string name="public_string">Public</string>

    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="close">CLOSE</string>

    <string name="permission_dialog_ok_button">OK</string>
    <string name="permission_dialog_cancel_button">Cancel</string>
    <string name="permission_exp_write_to_external">Hi! We need write external storage grant to cache stuff.</string>

    <dimen name="search_button_x_coor">996px</dimen>
    <dimen name="search_button_y_coor">176px</dimen>
</resources>
