<?xml version="1.0" encoding="utf-8"?>
<layout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/repoBasicInformationLyt"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_gravity="top"
                style="@style/titleTextViewStyle"
                android:text="@string/activity_repo_detail_login_title" />

            <TextView
                android:id="@+id/loginTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_gravity="bottom"
                android:ellipsize="end"
                style="@style/valueTextViewStyle" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_gravity="top"
                style="@style/titleTextViewStyle"
                android:text="@string/activity_repo_detail_type_title"/>

            <TextView
                android:id="@+id/typeTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_gravity="bottom"
                android:ellipsize="end"
                style="@style/valueTextViewStyle"
                android:text="User" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_gravity="top"
                style="@style/titleTextViewStyle"
                android:text="@string/activity_repo_detail_admin_title" />

            <TextView
                android:id="@+id/adminTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:layout_gravity="bottom"
                android:ellipsize="end"
                style="@style/valueTextViewStyle"
                android:text="User" />
        </LinearLayout>

        <include
            android:id="@+id/followersView"
            layout="@layout/repo_detail_listview_item" />

        <include
            android:id="@+id/followingView"
            layout="@layout/repo_detail_listview_item" />

        <include
            android:id="@+id/starredView"
            layout="@layout/repo_detail_listview_item" />

        <include
            android:id="@+id/subscriptionsView"
            layout="@layout/repo_detail_listview_item" />

        <include
            android:id="@+id/reposView"
            layout="@layout/repo_detail_listview_item" />

        <include
            android:id="@+id/eventsView"
            layout="@layout/repo_detail_listview_item" />

    </LinearLayout>
</layout>
